--- a/kubernetes/customers-deployment.yaml
+++ b/kubernetes/customers-deployment.yaml
@@ -19,13 +19,7 @@ spec:
         image: malikaliyev94/customers-service:latest
         env:
             - name: MYSQL_HOST
-              value: customers-service-database
-            # - name: MYSQL_PASSWORD
-            #   value: password
-            # - name: MYSQL_ROOT_PASSWORD
-              # value: password
-            # - name: MYSQL_DATABASE
-            #   value: dockercon2017
+              value: mysql-database
         ports:
         - containerPort: 9000
           protocol: TCP
