--- a/kubernetes/notifications-service.yaml
+++ b/kubernetes/notifications-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: customers-service
+  name: notifications-service
 spec:
   selector:
     app: payday
   ports:
     - name: port1
       protocol: TCP
-      port: 9000
-      targetPort: 9000
-  type: NodePort
+      port: 9003
+      targetPort: 9003
+  # type: NodePort
